# DjangoChannelsGraphqlWs

./: .dict  .envrc  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .pydocstylerc  .pylintdict  .pylintrc  .python-version  .travis.yml  CHANGELOG.md  LICENSE  README.md  mypy.ini  poetry.toml  pylintrc  pyproject.toml  pytest.ini  pytestcov.ini  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  tests.yml
channels_graphql_ws/: __init__.py  client.py  dict_as_object.py  graphql_ws.py  graphql_ws_consumer.py  operation_context.py  private_subscription_context.py  scope_as_context.py  serializer.py  subscription.py  test_graphql_ws.py  testing.py  transport.py
channels_graphql_ws/templates/graphene/: graphiql.html
example/: __init__.py  example.py  graphiql.html  manage.py  settings.py
example/@n1ru4l/push-pull-async-iterable-iterator/: index.js
example/django_example/: __init__.py  settings.py
tests/: __init__.py  conftest.py  test_async.py  test_basic.py  test_concurrent.py  test_confirm_subscriptions.py  test_context.py  test_error.py  test_graphql_ws.py  test_linters.py  test_middleware.py  test_notification_queue_limit.py  test_promise.py  test_publish_skip.py  test_serialization.py  test_subscription_synchronization.py  utils.py
