# Copyright (C) DATADVANCE, 2010-2020
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
# IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
# CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
# TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
# SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

# Python project configuration.

# File format is STANDARDIZED in the PEP 518:
# https://www.python.org/dev/peps/pep-0518/

# --------------------------------------------------------- BUILD-SYSTEM
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# --------------------------------------------------------------- POETRY
# Python packaging and dependency management.
# Docs: https://python-poetry.org/docs/
[tool.poetry]
name = "django-channels-graphql-ws"
version = "0.4.2"
description = """Django Channels based WebSocket GraphQL server with \
                 Graphene-like subscriptions"""
authors = ["Alexander A. Prokhorov <alexander.prokhorov@datadvance.net>"]
homepage = "https://github.com/datadvance/DjangoChannelsGraphqlWs"
repository = "https://github.com/datadvance/DjangoChannelsGraphqlWs"
license = "MIT"
packages = [
    { include = "channels_graphql_ws/" },
]
[tool.poetry.dependencies]
# Production dependencies.
# Version syntax: https://python-poetry.org/docs/versions/
python = "^3.6.0"
aiohttp = "^3.5"
asgiref = "^3.2"
channels = "^2.2"
django = ">=2.2"
graphene = "^2.1"
graphql-core = "^2.2"
msgpack = "^0.6.1"
[tool.poetry.dev-dependencies]
# Development dependencies.
# Version syntax: https://python-poetry.org/docs/versions/
black = { version = "*", allow-prereleases = true }
channels-redis = "*"
coverage = "*"
graphene-django = "*"
ipython = "*"
isort = {version = "*", extras = ["pyproject"]}
mypy = "*"
plumbum = "*"
pre-commit = "*"
pydocstyle = "*"
pylint = "*"
pylint-django = "*"
pylint-quotes = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-pythonpath = "*"
pytest-xdist = "*"
tox = "*"

# ---------------------------------------------------------------- BLACK
# Black - the uncompromising code formatter.
# https://black.readthedocs.io/en/stable/index.html
[tool.black]
target-version = ['py36', 'py37', 'py38']

# ---------------------------------------------------------------- ISORT
# Isort configuration.
# - Docs: https://github.com/timothycrosley/isort/wiki/isort-Settings
# - Tune Isort to correspond to the Black style guide:
#   https://black.readthedocs.io/en/stable/the_black_code_style.html
#
# NOTE: Isort treats paths relative to the current working directory, so
# if you run it not from the directory `.venv` resides it will not be
# able to properly detect thirdparty modules. Here is the bug report:
# https://github.com/timothycrosley/isort/issues/659. Current workaround
# is to provide `--virtual-env` from the command line.
[tool.isort]
balanced_wrapping = "True"
combine_as_imports = "True"
default_section = "FIRSTPARTY"
force_grid_wrap = 0
force_sort_within_sections = "True"
force_to_top = "True"
include_trailing_comma = "True"
line_length = 88
lines_after_imports = 2
multi_line_output = 3
not_skip = "__init__.py"
skip_glob = [".venv"]
use_parentheses = "True"
virtual_env = "./.venv/"

# ------------------------------------------------------------- COVERAGE
# Coverage.py configuration reference:
# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true
# List of packages to measure coverage in.
source = ["channels_graphql_ws/"]
# Do not include test files in the coverage report.
omit = ["**/test_*.py"]

# ------------------------------------------------------------------ TOX
# Tox configuration following Poetry FAQ instructions:
# https://python-poetry.org/docs/faq/#is-tox-supported
# At the moment of writing Tox only supports `pyproject.toml`-based
# configuration though this `legacy_tox_ini` option:
# https://tox.readthedocs.io/en/latest/example/basic.html#pyproject-toml-tox-legacy-ini
[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py36,py37,py38
[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest
"""
